--- a/kodilla-spring-web/build.gradle
+++ b/kodilla-spring-web/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id 'org.springframework.boot'
+    id 'org.springframework.boot' 
     id 'io.spring.dependency-management'
     id 'java'
 }
@@ -13,7 +13,7 @@ repositories {
 }
 
 dependencies {
-    implementation 'org.springframework.boot:spring-boot-starter'
+    implementation 'org.springframework.boot:spring-boot-starter-web'
     testImplementation('org.springframework.boot:spring-boot-starter-test') {
         exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
     }
